[package]
name = "game"
version = "0.1.0"
authors = ["[Shankar] matashankarrao@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "4.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
token = { path = "token", default-features = false, features = ["ink-as-dependency"]}

[lib]
name = "game"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "token/std",
]
ink-as-dependency = []


[workspace]
members = [
    "token",
]
